# cppLibMatematicas

./: CMakeLists.txt  LibMatematicas_global.h  matematicas.cpp  matematicas.h
